# AgriReliabilityBench

./: .gitignore  .zenodo.json  CITATION.cff  DATASETS.md  DATA_AND_CODE_AVAILABILITY.md  GITHUB_PUBLISHING.md  LICENSE  METADATA_TO_CONFIRM.md  PUBLIC_RELEASE_CONTENTS.md  README.md  REPRODUCIBILITY.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: smoke-test.yml
configs/datasets/: agriculture_vision.yaml  cropandweed.yaml  cwd30.yaml  deepweeds.yaml  phenobench.yaml  weedmap.yaml
configs/experiments/: cross_dataset.yaml  label_budget.yaml  models.yaml  stress_tests.yaml
configs/label_maps/: cwd30_cropandweed.yaml  cwd30_deepweeds.yaml
reports/: curated_script_inventory.md  file_manifest.json  file_manifest.tsv  github_release_audit.tsv  github_release_summary.md  release_metadata_audit_v1.0.1.md
scripts/: aggregate_formal_results.py  bootstrap_classification_ci.py  bootstrap_detection_ci.py  bootstrap_detection_records.py  bootstrap_segmentation_ci.py  bootstrap_segmentation_mask2former_records.py  bootstrap_segmentation_smp_records.py  build_dataset_statistics.py  compute_detection_segmentation_bootstrap.py  eval_calibration.py  eval_classification.py  eval_classification_stress.py  eval_rtdetr_ultralytics.py  eval_segmentation_mask2former.py  eval_segmentation_mask2former_stress.py  eval_segmentation_smp.py  eval_segmentation_stress.py  make_figures.py  make_manifest.py  prepare_training_data.py  run_smoke_test.py  train_classification_timm.py  train_segmentation_mask2former.py  train_segmentation_smp.py  validate_release_metadata.py
(+229 files in other folders)
